added conda env setup scripts

--- a/scripts/env.yml
+++ b/scripts/env.yml
@@ -7,13 +7,23 @@ dependencies:
   - jupyter
   - numpy
   - pip
-  - pytorch
+  - pytorch=1.2
   - cudatoolkit
   - torchvision
   - pip:
     - docopt
+    - pandas
     - tqdm
     - nltk
-    - ujson
+    - astor==0.7.1
+    - records
+    - babel
+    - tabulate
+    - spacy
+    - wandb
+    - fairseq
     - redis
+    - ujson
     - torch-scatter
+    - msgpack
+    - "--editable=git+https://github.com/huggingface/transformers.git@372a5c1ceec49b52c503707e9657bfaae7c236a0#egg=pytorch_pretrained_bert"
