--- a/scripts/env.yml
+++ b/scripts/env.yml
@@ -1,4 +1,4 @@
-name: pytorch
+name: tabert
 channels:
   - pytorch
   - defaults
@@ -7,24 +7,33 @@ dependencies:
   - jupyter
   - numpy
   - pip
-  - pytorch=1.2
-  - cudatoolkit
+  - pytorch=1.3
+  - cudatoolkit=10.0
   - torchvision
+  - pandas
   - pip:
     - cython
-    - docopt
     - pandas
     - tqdm
-    - nltk
-    - astor==0.7.1
-    - records
-    - babel
-    - tabulate
     - spacy
-    - wandb
-    - fairseq
     - redis
+    - pyzmq
     - ujson
     - torch-scatter
     - msgpack
-    - "--editable=git+https://github.com/huggingface/transformers.git@372a5c1ceec49b52c503707e9657bfaae7c236a0#egg=pytorch_pretrained_bert"
+    - transformers
+    - h5py
+    - fairseq
+    # - "--editable=git+https://github.com/huggingface/transformers.git@372a5c1ceec49b52c503707e9657bfaae7c236a0#egg=pytorch_pretrained_bert"
+    # required by tranX
+    # - nltk
+      #    - records
+      #    - babel
+      #    - tabulate
+    # - docopt
+    # - wandb
+    # - astor
+    # - wandb
+
+# pip install fairseq
+# python -m spacy download en_core_web_sm
