--- a/scripts/env.yml
+++ b/scripts/env.yml
@@ -21,19 +21,11 @@ dependencies:
     - ujson
     - torch-scatter
     - msgpack
-    - transformers
     - h5py
     - fairseq
-    # - "--editable=git+https://github.com/huggingface/transformers.git@372a5c1ceec49b52c503707e9657bfaae7c236a0#egg=pytorch_pretrained_bert"
-    # required by tranX
-    # - nltk
-      #    - records
-      #    - babel
-      #    - tabulate
-    # - docopt
-    # - wandb
-    # - astor
-    # - wandb
+    - "--editable=git+https://github.com/huggingface/transformers.git@372a5c1ceec49b52c503707e9657bfaae7c236a0#egg=pytorch_pretrained_bert"
+    # The latest version of pytorch-transformers is also supported.
+    # To use, simply uncomment the following line
+    # - transformers
 
-# pip install fairseq
 # python -m spacy download en_core_web_sm
