--- a/scripts/env.yml
+++ b/scripts/env.yml
@@ -19,10 +19,10 @@ dependencies:
     - redis
     - pyzmq
     - ujson
-    - torch-scatter
+    - torch-scatter==1.3.2
     - msgpack
     - h5py
-    - fairseq
+    - fairseq==0.8.0
     - "--editable=git+https://github.com/huggingface/transformers.git@372a5c1ceec49b52c503707e9657bfaae7c236a0#egg=pytorch_pretrained_bert"
     # The latest version of pytorch-transformers is also supported.
     # To use, simply uncomment the following line
